--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="./normalize.css" />
     <link rel="stylesheet" href="./index.css" />
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
   <body>
     <main class="box">
-      <section class="img__container">
+      <div class="img__container">
         <img src="./images/image-equilibrium.jpg" alt="" />
-      </section>
+      </div>
 
       <section class="info">
         <h2 class="text-white">Equilibrium #3429</h2>
@@ -29,7 +30,7 @@
             <img class="icon" src="./images/icon-ethereum.svg" alt="" />
             <p>0.041 ETH</p>
           </div>
-          
+
           <div class="flex align-items-center">
             <img class="icon" src="./images/icon-clock.svg" alt="" />
             <p>3 days left</p>
