Change paragraph color

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="flex space-between">
           <div class="text-cyan flex align-items-center">
             <img class="icon" src="./images/icon-ethereum.svg" alt="" />
-            <p>0.041 ETH</p>
+            <p class="text-cyan">0.041 ETH</p>
           </div>
 
           <div class="flex align-items-center">
